--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -43,7 +43,7 @@ div#app {
             padding: 0 var(--spacing-1);
 
             > menu {
-                gap: var(--spacing-2);
+                gap: 0 var(--spacing-2);
             }
 
             menu {
@@ -65,6 +65,8 @@ div#app {
 
             &#primary-navigation {
                 display: flex;
+                flex-wrap: wrap;
+                gap: var(--spacing-1) var(--spacing-2);
                 justify-content: space-between;
 
                 button {
@@ -78,6 +80,7 @@ div#app {
                 display: flex;
                 justify-content: space-between;
                 border-bottom: var(--border);
+                flex-wrap: wrap;
 
                 > span {
                     padding: var(--spacing-1)
@@ -85,24 +88,35 @@ div#app {
 
                 > menu {
                     gap: 0;
+                    flex-wrap: wrap;
 
                     > menu {
-                        border-left: var(--border);
-                        margin-left: var(--spacing-1);
-                        padding-left: var(--spacing-1);
+                        margin-right: var(--spacing-1);
+                        padding-right: var(--spacing-1);
+                        flex-wrap: wrap;
 
                         &#skip-links {
                             opacity: 0;
                             width: 0;
                             height: 0;
                             transition: opacity 100ms;
+                            position: absolute;
+                            left: -999vw;
 
                             &:focus-within {
                                 width: initial;
                                 height: initial;
                                 opacity: 1;
                                 transition: opacity 100ms;
+                                left: 0;
+                                position: relative;
                             }
+                        }
+
+                        &:last-child {
+                            border-right: none;
+                            margin-right: 0;
+                            padding-right: 0;
                         }
                     }
                 }
